# SAM

./: .Rbuildignore  .gitignore  .travis.yml  Makefile  README.md  description-addon  webteststocklist
NSAS/: script.R
NSAS/old/: FLEET.txt  NATMOR.txt  lai.txt
SAM/: DESCRIPTION  NAMESPACE
SAM/R/: conf.R  init.R  methods.R  plot.R  reading.R  run.R  tables.R
SAM/data/: nscod2015.RData  nscodConf.RData  nscodData.RData
SAM/man/: defpar.Rd  fbarplot.Rd  logLik.sam.Rd  nscodData.Rd  nscodParameters.Rd  plot.sam.Rd  read.surveys.Rd  read.table.nowarn.Rd  recplot.Rd  sam.fit.Rd  setup.sam.data.Rd  ssbplot.Rd  ssbtable.Rd
SAM/src/: SAM.cpp  sam.cpp
docs/: 00Index.md  ICESvalues.md  MSE.md  addRecruitmentCurve.md  addforecast.md  b0plot.md  b0table.md  bc.md  c.sam.md  catchbyfleetplot.md  catchbyfleettable.md  catchplot.md  catchtable.md  caytable.md  clean.void.catches.md  coef.sam.md  componentplot.md  corplot.md  corplotcommon.md  dataplot.md  defcon.md  defpar.md  deterministicReferencepoints.md  deterministicReferencepoints.sam.md  dot-SAM_replicate.md  empirobscorrplot.md  equilibriumbiomassplot.md  equilibriumbiomasstable.md  faytable.md  fbarplot.md  fbartable.md  fitfromweb.md  fitplot.md  forecast.md  forecastMSY.md  fselectivityplot.md  generationlengthplot.md  generationlengthtable.md  getAllDerivedValues.md  getFleet.md  (+94 more)
examplesTMB/listOfMatrices/: exampleWithListOfMatrices.R  exampleWithListOfMatrices.cpp
figs/: fig.R
newstock/: Makefile
newstock/conf/: turbotmb
newstock/src/: common.R  dataplot.R  datascript.R  datavalidator.R  forecast.R  leaveout.R  model.R  plotscript.R  residuals.R  retro.R  sourcevalidator.R
old/bluewhiting/: res.EXP
sandboxF/: Fobs.RData  babysamFW.R  babysamFW.cpp  babysamUVW.R  babysamUVW.cpp  logF.R  logF.cpp  logFW.R  logFW.cpp  logUV.R  logUV.cpp  logUVW.R  logUVW.cpp
stockassessment/: DESCRIPTION  NAMESPACE  NEWS  cleanup  configure  configure.ac  configure~
stockassessment/R/: #refitfromweb.R#  addRecruitmentCurve.R  conf.R  deterministic_referencepoints.R  findMSY.R  flr_convenience.R  forecast.R  hcr.R  init.R  jacobian.R  methods.R  modelforecast.R  mse.R  plot.R  reading.R  referencepoints.R  refitfromweb.R  relist.R  retro.R  run.R  sim.R  simulationforecast.R  splineKnots.R  stochastic_referencepoints.R  tables.R  text.R  writing.R
stockassessment/data/: nscodConf.RData  nscodData.RData  nscodParameters.RData
stockassessment/inst/: CITATION  flr_convenience.R  ices_values.R  parse_src.R
stockassessment/inst/include/: SAM.hpp  SAM_API.hpp  SAM_preprocessor.h  biopar.hpp  define.h  define.hpp  derived.h  derived.hpp  equilibrium.hpp  f.h  f.hpp  forecast.hpp  hcr.hpp  incidence.hpp  macros.h  n.h  n.hpp  obs.h  obs.hpp  p.hpp  perRecruit.hpp  perRecruit_stochastic.hpp  pnorm.hpp  predn.h  predn.hpp  predobs.h  predobs.hpp  rec_atomic.hpp  recruitment.hpp  referencepoints.hpp  reproductive.hpp  spline.hpp  splinePenalty.hpp  survival.hpp  tiny_adflex.hpp  toF.hpp  zeroin.hpp
stockassessment/inst/include/SAM/: biopar.hpp  convenience.hpp  define.hpp  derived.hpp  dirichlet.hpp  empirical_pr.hpp  equilibrium.hpp  equilibrium_recycling.hpp  extend_array.hpp  f.hpp  forecast.hpp  forecastsim.hpp  hcr.hpp  incidence.hpp  logspace.hpp  mvmix.hpp  n.hpp  newton.hpp  obs.hpp  p.hpp  pnorm.hpp  predf.hpp  predn.hpp  predobs.hpp  recruitment.hpp  referencepoints.hpp  refpointset.hpp  reproductive.hpp  season.hpp  spline.hpp  splinePenalty.hpp  stochastic_equilibrium.hpp  survival.hpp  toF.hpp
stockassessment/man/: ICESvalues.Rd  MSE.Rd  addRecruitmentCurve.Rd  addforecast.Rd  b0plot.Rd  b0table.Rd  bc.Rd  c.sam.Rd  catchbyfleetplot.Rd  catchbyfleettable.Rd  catchplot.Rd  catchtable.Rd  caytable.Rd  clean.void.catches.Rd  coef.sam.Rd  componentplot.Rd  corplot.Rd  corplotcommon.Rd  dataplot.Rd  defcon.Rd  defpar.Rd  deterministicReferencepoints.Rd  deterministicReferencepoints.sam.Rd  dot-SAM_replicate.Rd  ellipse.Rd  empirobscorrplot.Rd  equilibriumbiomassplot.Rd  equilibriumbiomasstable.Rd  erbplot.Rd  erbtable.Rd  fSelectivityPlot.Rd  faytable.Rd  fbarplot.Rd  fbartable.Rd  fitfromweb.Rd  fitplot.Rd  forecast.Rd  forecastMSY.Rd  fsbplot.Rd  fsbtable.Rd  (+104 more)
stockassessment/src/: C_stockassessment.cpp  Makevars  Makevars.in  Makevars.win  R_main.cpp  R_spline.h  TMB.cpp  TMB.h  jacobian.cpp  main.cpp  perRecruit.cpp  perRecruit.h  perRecruit.hpp  polynomial.cpp  risk.cpp  spline.cpp  spline.hpp  stockassessment.cpp
stockassessment/tests/: AAAtest-all.R  compare.fits.R  run.compare.R
stockassessment/tests/mack/: fit.expected.Rdata  script.R
stockassessment/tests/nscod/: .Rhistory  fit.expected.Rdata  script.R
stockassessment/tests/nsher/: .Rhistory  fit.expected.Rdata  script.R
stockassessment/tests/testthat/: test-mack.R  test-nscod.R  test-nsher.R
stockassessment/vignettes/: obsCovarOptions.rmd  simulate.Rmd
stockassessment/vignettes/nsher/: script.R
testmore/: Makefile
tests/nsher/: nul  (+1 more)
vignettes/: stockassessment.Rnw
(+141 files in other folders)
